<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiveOak Chat</string>
    <string name="user_settings">User</string>

    <!-- Username Fragment -->
    <string name="username_activity_enter">Enter username</string>
    <string name="username_activity_hint">Username</string>
    <string name="username_activity_submit">Go to chat</string>
    <string name="username_activity_username_required">A username is required</string>
    <string name="username_activity_ime_action">Enter</string>

    <!-- User Dialog -->
    <string name="user_dialog_title">User Settings</string>
    <string name="user_dialog_logout">Logout?</string>
    <string name="user_dialog_cancel_button">Cancel</string>
    <string name="user_dialog_logout_button">Logout</string>

    <!-- Submit Fragment -->
    <string name="submit_fragment_send">SEND</string>
    <string name="submit_fragment_edit_message_hint">Send a message....</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Chats Fragment -->
    <string name="chats_fragment_connecting">Connecting</string>
    <string name="chats_fragment_no_messages">No messages have been sent yet. Why don\'t you start a conversation?</string>
    <string name="chats_fragment_no_message_icon">&#xf0e6;</string>

    <!-- Chat Fragment -->
    <string name="chat_fragment_empty_character">X</string>
    <string name="chat_fragment_empty_name">Name</string>
    <string name="chat_fragment_empty_message">Message to go here.</string>
    <string name="chat_fragment_status_sending">Sending</string>
    <string name="chat_fragment_status_sent">Sent</string>
    <string name="chat_fragment_status_received">Received</string>

    <!-- Chat Notification -->
    <string name="chat_notification_title_message">A message has arrived</string>
    <string name="chat_notification_title_messages">Messages have arrived</string>
    <string name="chat_notification_text_message">You have one new message</string>
    <string name="chat_notification_text_messages">You have ${MESSAGE_COUNT} new messages</string>


</resources>
