<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <!--<LinearLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!---->
        <!-->-->

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/chat_fragment_empty_character"
            android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:gravity="center"
            android:background="@drawable/circle_background"
            android:id="@+id/chat_fragment_icon"
            android:textColor="#FFFFFF" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp"
            android:layout_margin="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_fragment_empty_name"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:id="@+id/chat_fragment_name"
                android:textColor="#000000"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chat_fragment_empty_message"
                android:id="@+id/chat_fragment_message"
                android:textColor="#000000"/>

        </LinearLayout>
    <!--</LinearLayout>-->

</LinearLayout>