<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.liveoak.example.android.chat.ChatsFragment">

    <ListView
        android:id="@android:id/list"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:stackFromBottom="true"
        android:transcriptMode="alwaysScroll"
        android:divider="@null"
        android:dividerHeight="10dp"
        android:background="#FFFFFF"
        android:paddingBottom="10dp"
        />

    <LinearLayout
        android:id="@android:id/empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <ProgressBar
                android:layout_height="100dp"
                android:layout_width="100dp"
                android:gravity = "center"
                android:layout_centerInParent="true"
                android:indeterminateDrawable="@drawable/progress"
                />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chats_fragment_connecting"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/chats_fragment_no_messages"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/chats_fragment_no_messages_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity = "center"
            android:textSize="96dp"
            android:text="@string/chats_fragment_no_message_icon"
            android:textColor="@color/conversation_grey"
            />

        <TextView
            android:layout_width="@dimen/chats_fragment_message_width"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/chats_fragment_no_messages"
            android:textSize="@dimen/chats_fragment_no_message_font_size"
            />

    </LinearLayout>


</RelativeLayout>
